syntax = "proto3";

option java_multiple_files = true;
package org.ec.search.grpc.services;

enum SortType{
    CORRELATION = 0;
    TIME = 1;
    HOT = 2;
}

message Request{
    string query = 1;
    int32  pageNum = 2;
    int32  pageSize = 3;
    SortType sortType = 4;
}

message Response{
    string query = 1;
    int32 totalCount = 2;
    int32 matchCount = 3;
    int32 pageNum = 4;
    int32 pageSize = 5;
    string docs = 6;
}

service SearchService{
    rpc searchByQuery(Request) returns (Response);
}